<resources>
    <string name="app_name">WPS Tablet</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_input_label">Input Label</string>
    <string name="nav_proses_produksi">Proses Produksi</string>
    <string name="nav_stock_opname">Stock Opname</string>
    <string name="nav_sawmill">Proses Sawmill</string>
    <string name="nav_laporan">Laporan</string>
    <string name="nav_audit">Audit</string>
    <string name="nav_penjualan">Penjualan</string>
    <string name="nav_spk">SPK</string>
    <string name="nav_grade_abc">Grade ABC</string>
    <string name="nav_planning_mesin">Planning Mesin</string>
    <string name="nav_nyangkut">Nyangkut</string>
    <string name="nav_logout">Logout</string>
    <string name="sidebar_brand_title">WPS</string>
    <string name="sidebar_brand_subtitle">Wood Production System</string>
    <string name="sidebar_section_main">UTAMA</string>
    <string name="sidebar_section_production">PRODUKSI</string>
    <string name="sidebar_section_operations">OPERASIONAL</string>
    <string name="sidebar_section_reports">LAPORAN &amp; PENJUALAN</string>
    <string name="sidebar_section_system">SISTEM</string>
    <string name="action_settings">Settings</string>

    <string name="dashboard_topbar_title">Dashboard</string>
    <string name="dashboard_topbar_subtitle">Wood Production System</string>
    <string name="dashboard_chart_title">Produksi 7 Hari Terakhir</string>
    <string name="dashboard_activity_title">Aktivitas Terbaru</string>
    <string name="dashboard_footer">WOOD PRODUCTION SYSTEM  |  © 2026 All Rights Reserved</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
