<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/sidebar_section_main">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_dashboard"
                    android:icon="@drawable/ic_dashboard"
                    android:title="@string/nav_dashboard" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sidebar_section_production">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_input_label"
                    android:icon="@drawable/label"
                    android:title="@string/nav_input_label" />
                <item
                    android:id="@+id/nav_proses_produksi"
                    android:icon="@drawable/proses"
                    android:title="@string/nav_proses_produksi" />
                <item
                    android:id="@+id/nav_sawmill"
                    android:icon="@drawable/sawmill"
                    android:title="@string/nav_sawmill" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sidebar_section_operations">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_stock_opname"
                    android:icon="@drawable/ic_stock_opname"
                    android:title="@string/nav_stock_opname" />
                <item
                    android:id="@+id/nav_grade_abc"
                    android:icon="@drawable/ic_grade"
                    android:title="@string/nav_grade_abc" />
                <item
                    android:id="@+id/nav_planning_mesin"
                    android:icon="@drawable/ic_schedule"
                    android:title="@string/nav_planning_mesin" />
                <item
                    android:id="@+id/nav_nyangkut"
                    android:icon="@drawable/ic_pending"
                    android:title="@string/nav_nyangkut" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sidebar_section_reports">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_laporan"
                    android:icon="@drawable/ic_report"
                    android:title="@string/nav_laporan" />
                <item
                    android:id="@+id/nav_penjualan"
                    android:icon="@drawable/ic_sales"
                    android:title="@string/nav_penjualan" />
                <item
                    android:id="@+id/nav_audit"
                    android:icon="@drawable/ic_history"
                    android:title="@string/nav_audit" />
                <item
                    android:id="@+id/nav_spk"
                    android:icon="@drawable/ic_spk"
                    android:title="@string/nav_spk" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sidebar_section_system">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_logout" />
            </group>
        </menu>
    </item>

</menu>
